--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # Install ssh key
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2.3.1
         with:
@@ -23,14 +35,11 @@ jobs:
       - name: Generate auth hosts
         run: ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
+      - name: Install dependencies
+        run: pnpm install
 
-      # Build
-      - run: npm ci
-      - run: npm run build
+      - name: Build project
+        run: pnpm build
 
-      # Deploy
-      - run: cd .vitepress/dist && rsync --archive --compress --progress --delete . ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_PATH }}
+      - name: Copy to Server
+        run: cd .vitepress/dist && rsync --archive --compress --progress --delete . ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_PATH }}
