--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "dev": "vitepress dev",
     "build": "vitepress build",
     "preview": "vitepress preview"
+  },
+  "dependencies": {
+    "viewerjs": "^1.11.6",
+    "vitepress-plugin-image-viewer": "^1.1.5"
   }
 }
