--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,12 @@ jobs:
           pnpm build
 
       - name: Install SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "{{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
-        shell: bash
+        uses: shimataro/ssh-key-action@v2.3.1
+        with:
+          key: "${{ secrets.SSH_KEY }}"
+          known_hosts: "just-a-placeholder-so-we-dont-get-errors"
+      
+      - run: ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
       - name: Copy to Server
         run: cd .vitepress/dist && rsync -avzi --checksum . ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_PATH }}
