--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           key: "${{ secrets.SSH_KEY }}"
           known_hosts: "just-a-placeholder-so-we-dont-get-errors"
       
-      - run: ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+      - run: ssh-keyscan -p ${{secrets.SSH_PORT}} -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
       - name: Copy to Server
-        run: cd .vitepress/dist && rsync -avzi --checksum . ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_PATH }}
+        run: cd .vitepress/dist && rsync -avzi --checksum -e "ssh -p ${{ secrets.SSH_PORT }}" . ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_PATH }}
